--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>StackAct</title>
+    <title>Prepare for Minesweeper</title>
   </head>
   <body style="background-color:black">
     <canvas id="canvas" style="background-color:black; padding:0; margin:auto; display:block"></canvas>
-    <script src="https://cdn.jsdelivr.net/npm/pagurus@0.6.7/dist/pagurus.min.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/pagurus@0.6.7/dist/pagurus.min.js"></script-->
+    <script src="/pagurus_web/dist/pagurus.js"></script>
     <script>
       Pagurus.Game.load("game.wasm").then(async game => {
           const canvas = document.getElementById("canvas");
