Rename to mineplacer

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Prepare for Minesweeper</title>
+    <title>Mineplacer</title>
   </head>
   <body style="background-color:black">
     <canvas id="canvas" style="background-color:black; padding:0; margin:auto; display:block"></canvas>
