--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
                   const actionJson = JSON.parse(new TextDecoder("utf-8").decode(actionBytes));
                   switch (actionJson) {
                       case "OpenHelp":
-                          window.open("https://github.com/sile/prepare_for_minesweeper/", "_blank");
+                          window.open("https://github.com/sile/mineplacer/", "_blank");
                           break;
                   }
               }
