--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,14 @@
 <html>
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="https://sile.github.io/mineplacer/favicon.png" sizes="48x48" />
+
+    <meta property="og:title" content="Mineplacer" />
+    <meta property="og:url" content="https://sile.github.io/mineplacer/" />
+    <meta property="og:description" content="Prepare for the game of Minesweeper by placing mines!" />
+    <meta property="og:image" content="https://sile.github.io/mineplacer/image-half.jpg" />
+
+
     <title>Mineplacer</title>
   </head>
   <body style="background-color:black">
