--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 
     <meta property="og:title" content="Mineplacer" />
     <meta property="og:url" content="https://sile.github.io/mineplacer/" />
-    <meta property="og:description" content="Prepare for the game of Minesweeper by placing mines!" />
+    <meta property="og:description" content="Prepare for a game of Minesweeper by placing mines!" />
     <meta property="og:image" content="https://sile.github.io/mineplacer/image-half.jpg" />
 
 
