--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="https://sile.github.io/mineplacer/favicon.png" sizes="48x48" />
+    <link rel="manifest" href="manifest.json">
 
     <meta property="og:title" content="Mineplacer" />
     <meta property="og:url" content="https://sile.github.io/mineplacer/" />
@@ -15,6 +16,10 @@
     <canvas id="canvas" style="background-color:black; padding:0; margin:auto; display:block"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/pagurus@0.6.7/dist/pagurus.min.js"></script>
     <script>
+      if ("serviceWorker" in navigator) {
+          await navigator.serviceWorker.register('./sw.js');
+      }
+
       Pagurus.Game.load("game.wasm").then(async game => {
           const canvas = document.getElementById("canvas");
           const system = await Pagurus.System.create(game.memory, { canvas });
