--- a/web/index.html
+++ b/web/index.html
@@ -36,11 +36,13 @@
           window.addEventListener('resize', resizeCanvas);
 
           game.initialize(system);
-          try {
-              const qs = new TextEncoder().encode(window.location.search)
-              game.command(system, "setQueryString", qs);
-          } catch (error) {
-              alert('[WARNING] ' + JSON.parse(error.message)['message'] + ' (custom mode is disabled)');
+          if (window.location.search) {
+              try {
+                  const qs = new TextEncoder().encode(window.location.search)
+                  game.command(system, "setQueryString", qs);
+              } catch (error) {
+                  alert('[WARNING] ' + JSON.parse(error.message)['message'] + ' (custom mode is disabled)');
+              }
           }
 
           while (true) {
